Fixed footer overlapping page content

--- a/css/form_pages.css
+++ b/css/form_pages.css
@@ -1,9 +1,5 @@
 .page-body {
-  display: flex;
-  flex-direction: column;
-  width: 700px;
-  margin: 0 20px;
-  margin-top: 20px;
+  max-width: 700px;
 }
 
 input,
@@ -12,7 +8,7 @@ select {
   display: block;
   padding: 8px;
   width: 100%;
-  margin-bottom: 15px;
+  margin-bottom: 10px;
 }
 
 label {
@@ -37,4 +33,16 @@ form p {
 
 #registrar-activo {
   align-self: flex-end;
+}
+
+.form-input-error {
+  font-size: 12px;
+  margin-bottom: 10px;
+  margin-left: 8px;
+  color: red;
+  display: none;
+}
+
+.form-input-error-active {
+  display: block;
 }
