--- a/css/table_pages.css
+++ b/css/table_pages.css
@@ -1,11 +1,3 @@
-.page-body {
-  display: flex;
-  flex-direction: column;
-  width: 80%;
-  margin: 0 20px;
-  margin-top: 20px;
-}
-
 .page-content {
   display: flex;
   height: 100%;
@@ -50,11 +42,6 @@ input[type="search"] {
   background-size: 20px 20px;
   background-repeat: no-repeat;
   padding: 5px 5px 5px 35px;
-}
-
-input[type="search"]:focus {
-  border: 1px solid #444;
-  outline: none;
 }
 
 .table-container {
